variables.Variables.scala.error
Compilation error:
Variables:9: error: not found: value StepAmount
  stepAmount = StepAmount - 1;
               ^